# k8s-mcp

./: .gitignore  Makefile  README.md  k8s_mcp_server.py  main.py  mcp-client-together.py  mcp_client.py  pyproject.toml
app/: .gitignore
app/backend/: .env.example  requirements.txt  run.py  test_api.py
app/backend/app/: config.py  main.py
app/backend/app/api/: websocket.py
app/backend/app/api/routes/: chat.py  health.py
app/backend/app/models/: chat.py  tool_call.py
app/backend/app/services/: chat_service.py  gemini_service.py  mcp_service.py
app/docs/: COMPLETE_FIX_SUMMARY.md  DEBUG_TOOL_CALLS.md  FIXES_APPLIED.md  INLINE_TOOL_CALLS.md  INLINE_TOOL_VISUAL_GUIDE.md  QUICK_DEBUG.md  SETUP_GUIDE.md  TEST_WEBSOCKET.md  TOOL_CALLS_DEBUGGING.md  WEBSOCKET_IMPLEMENTATION.md
app/frontend/: .env.example  index.html  package.json  vite.config.js
app/frontend/src/: App.jsx
app/frontend/src/components/: ChatWindow.jsx  LoadingSpinner.jsx  Message.jsx  ToolCall.jsx  ToolCallHistory.jsx
app/frontend/src/hooks/: useChatWebSocket.js
app/frontend/src/pages/: ChatPage.jsx
app/frontend/src/store/: chatStore.js
app/frontend/src/styles/: App.css  ChatPage.css  ChatWindow.css  LoadingSpinner.css  Message.css  ToolCall.css  ToolCallHistory.css  index.css
